syntax = "proto3";

package proto;
 
message SendHeartbeatRequest {
  string data = 1;
}
message SendHeartbeatResponse {
  string data = 1;
}
service ServerService {
  rpc SendHeartbeat(SendHeartbeatRequest) returns (SendHeartbeatResponse);
}